# LidarMaillage

./: .gitignore  CMakeLists.txt  README.md  c3t3.h  data.ply  main.cpp  plysimpleloader.cpp  plysimpleloader.h  polyhedronbuilder.h  tetrahedronbuilder.h  types.h
Rapport/: Soutenance.odp  conclu.tex  intro.tex  page_de_garde.tex  part1.tex  part2.tex  part3.tex  preambule.tex  projet.tex
Rapport/Illustrations/: .directory
